compiler/src/test/resources/amyc/nameAnalyzer/failing/LocalScope.amy
module LocalScope
  fn foo(): Int = {
    val i: Int = i;
    i
  }
end LocalScope
